Separate out equalweights and impliedweights analysys

--- a/phylo/.gitignore
+++ b/phylo/.gitignore
@@ -1,2 +1,8 @@
+equalweights-strict.tre
+equalweights.log
+equalweights.tre
+impliedweights-strict.tre
+impliedweights.log
+impliedweights.tre
 tnt
 tnt-mac-no-tax-limit.zip
