Copy command files into `previous` directory

--- a/phylo/Makefile
+++ b/phylo/Makefile
@@ -6,6 +6,7 @@ equalweights: equalweights.log
 
 equalweights.log: archbishop.tnt equalweights.run
 	test -d previous || mkdir previous
+	cp equalweights.run previous/
 	test -f equalweights.log && mv equalweights.log previous/
 	test -f equalweights.tre && mv equalweights.tre previous/
 	test -f equalweights-strict.tre && mv equalweights-strict.tre previous/
@@ -15,6 +16,7 @@ impliedweights: impliedweights.log
 
 impliedweights.log: archbishop.tnt impliedweights.run
 	test -d previous || mkdir previous
+	cp impliedweights.run previous/
 	test -f impliedweights.log && mv impliedweights.log previous/
 	test -f impliedweights.tre && mv impliedweights.tre previous/
 	test -f impliedweights-strict.tre && mv impliedweights-strict.tre previous/
