Save genersterd trees in TNT's format as well as Nexus

--- a/phylo/.gitignore
+++ b/phylo/.gitignore
@@ -1,7 +1,9 @@
 equalweights-strict.tre
+equalweights.export
 equalweights.log
 equalweights.tre
 impliedweights-strict.tre
+impliedweights.export
 impliedweights.log
 impliedweights.tre
 previous
