--- a/phylo/Makefile
+++ b/phylo/Makefile
@@ -9,6 +9,7 @@ equalweights.log: archbishop.tnt equalweights.run
 	cp equalweights.run previous/
 	test -f equalweights.log && mv equalweights.log previous/
 	test -f equalweights.tre && mv equalweights.tre previous/
+	test -f equalweights.export && mv equalweights.export previous/
 	test -f equalweights-strict.tre && mv equalweights-strict.tre previous/
 	./tnt/tnt.command $?,
 
@@ -19,6 +20,7 @@ impliedweights.log: archbishop.tnt impliedweights.run
 	cp impliedweights.run previous/
 	test -f impliedweights.log && mv impliedweights.log previous/
 	test -f impliedweights.tre && mv impliedweights.tre previous/
+	test -f impliedweights.export && mv impliedweights.export previous/
 	test -f impliedweights-strict.tre && mv impliedweights-strict.tre previous/
 	./tnt/tnt.command $?,
 
