Ignore generated file equalweights-apomorphies.log

--- a/phylo/.gitignore
+++ b/phylo/.gitignore
@@ -2,6 +2,7 @@
 equalweights-strict.tre
 equalweights.export
 equalweights.log
+equalweights-apomorphies.log
 equalweights.tre
 impliedweights-strict.tre
 impliedweights.export
