Update .gitignore for generated results being in 'results'

--- a/phylo/.gitignore
+++ b/phylo/.gitignore
@@ -1,14 +1,6 @@
 .~lock.CharacterList.doc#
-equalweights-strict.tre
-equalweights.export
-equalweights.log
-equalweights-apomorphies.log
-equalweights.tre
-impliedweights-strict.tre
-impliedweights.export
-impliedweights.log
-impliedweights.tre
 previous
+results
 tnt
 tnt-mac-no-tax-limit.zip
 tnt-win-no-tax-limit.zip
