Modify phylo/Makefile to use m4-generated run-files

--- a/phylo/Makefile
+++ b/phylo/Makefile
@@ -1,27 +1,22 @@
-**make-default**: equalweights
+NAMES = equalweights impliedweights equalweights-c1 equalweights-c2
+SCRIPTS = $(NAMES:%=%.run)
+LOGS = $(NAMES:%=results/%.log)
 
-all: equalweights impliedweights
+**make-default**: results/equalweights.log
 
-equalweights: equalweights.log
+all: $(LOGS)
 
-equalweights.log: archbishop.tnt equalweights.run
-	test -d previous || mkdir previous
-	-cp equalweights.run previous/
-	-test -f equalweights.log && mv equalweights.log previous/
-	-test -f equalweights-apomorphies.log && mv equalweights-apomorphies.log previous/
-	-test -f equalweights.tre && mv equalweights.tre previous/
-	-test -f equalweights.export && mv equalweights.export previous/
-	-test -f equalweights-strict.tre && mv equalweights-strict.tre previous/
-	./tnt/tnt.command equalweights.run,
+results/%.log: %.run
+	$(eval STEM := $(shell echo $@ | sed 's/^results\/\(.*\)\.log$$/\1/'))
+	rm -f previous/$(STEM).*
+	test -f results/$(STEM).log && mv results/$(STEM).* previous/ || :
+	./tnt/tnt.command $(STEM).run,
 
-impliedweights: impliedweights.log
+%.run: scripts/%.m4 scripts/template.m4
+	rm -f $@
+	m4 $< > $@
+	chmod ugo-w $@
 
-impliedweights.log: archbishop.tnt impliedweights.run
-	test -d previous || mkdir previous
-	-cp impliedweights.run previous/
-	-test -f impliedweights.log && mv impliedweights.log previous/
-	-test -f impliedweights.tre && mv impliedweights.tre previous/
-	-test -f impliedweights.export && mv impliedweights.export previous/
-	-test -f impliedweights-strict.tre && mv impliedweights-strict.tre previous/
-	./tnt/tnt.command impliedweights.run,
+clean:
+	rm -f $(SCRIPTS)
 
