Save copy of .run file

--- a/phylo/Makefile
+++ b/phylo/Makefile
@@ -10,6 +10,7 @@ results/%.log: %.run
 	$(eval STEM := $(shell echo $@ | sed 's/^results\/\(.*\)\.log$$/\1/'))
 	rm -f previous/$(STEM).*
 	test -f results/$(STEM).log && mv results/$(STEM).* previous/ || :
+	cp $(STEM).run results/
 	./tnt/tnt.command $(STEM).run,
 
 %.run: scripts/%.m4 scripts/template.m4
